# PR-Review-Assistant

./: .gitignore  MVP-开发文档.md  README.md  pyproject.toml
.claude/: settings.json
ai-pr-review/: .env.example  README.md  requirements.txt
ai-pr-review/backend/: aggregator.py  config.py  context_builder.py  github_client.py  llm_client.py  main.py  models.py  orchestrator.py  prompts.py  records.json
ai-pr-review/frontend/: app.py
